# cuPDLPx

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_and_test.sh  pyproject.toml
cupdlpx/: cupdlpx.c  interface.c  interface.cu  interface.h  io.c  solver.cu  solver.h  struct.h  utils.cu
python/: README.md
python/cupdlpx/: PDLP.py  __init__.py  model.py
python/pycupdlpx/: __init__.py  _core.py  model.py
python_bindings/: CMakeLists.txt  _core_bindings.cpp
test/: conftest.py  test_basic.py  test_infeasible_unbounded.py  test_interface.c  test_interface.py  test_limit.py  test_matrix_formats.py  test_numerical.py  test_warm_start.py
