[build-system]
requires = ["scikit-build-core>=0.9.0", "pybind11>=2.11.0", "numpy", "scipy"]
build-backend = "scikit-build-core.build"

[project]
name = "pycupdlpx"
version = "0.1.0"
description = "Python bindings for cuPDLPx (GPU-accelerated first-order LP solver)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "cuPDLPx authors"}]
dependencies = ["numpy>=1.21", "scipy>=1.8"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"
packages = ["pycupdlpx"]
package-dir = {"" = "python"}

[tool.scikit-build.cmake]
minimum-version = "3.20"